[tool.poetry]
name = "oliver"
version = "0.0.0+oliver"
description = "oliver"
authors = ["oliver <oliver@oliver.oliver>"]
license = "oliver"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
